force-app/main/default/objects/Ex_Login_History__c/Ex_Login_History__c.object-meta.xml
<CustomObject>
    <label>Session History</label>
    <nameField>
        <displayFormat>Ex-SH-{000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Session History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>