force-app/main/default/objects/Ex_Login_History__c/fields/Session_Expiration__c.field-meta.xml
<CustomField>
    <fullName>Session_Expiration__c</fullName>
    <label>Session Expiration</label>
    <type>DateTime</type>
</CustomField>