force-app/main/default/objects/Ex_Login_History__c/fields/Session_Id__c.field-meta.xml
<CustomField>
    <fullName>Session_Id__c</fullName>
    <label>Session Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>